--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,16 @@
-.container{
-    width: auto;
-    /* background-color: black; */
-    height: 1000px;
-    background-image: url("../data/amabie_sekkyaku.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-
-}    
-h1{
-    font-size: 35px;
-    font-family: serif;
-    font-weight: bold;
-    color: black;
-    /* padding-top: 20px; */
-    /* width: 80%; */
-    /* background-color: blue; */
-    text-align: center;
+header{
+    position: fixed;
+    height: 80px;
+    width: 100%;
+    background-color: aqua;
 }
 
-#sub-tytle{
-    font-size: 30px;
-    font-family: serif;
-    color: darkgray;
-    /* margin: 5px auto; */
-    /* width: 80%; */
-    display: none;
+.header-title{
+    width: 100%;
+}
+
+h1{
+    font-weight: bold;
+    color: darkslategray;
     text-align: center;
 }
