--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 header{
     position: fixed;
     height: 80px;
@@ -13,4 +18,5 @@ h1{
     font-weight: bold;
     color: darkslategray;
     text-align: center;
+    margin-top: 15px;
 }
