--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@ header{
     background-color: aqua;
 }
 
+.header-container img{
+    height: 60px;
+    float: left;
+    margin-top: 0;
+}
+
 .header-title{
     width: 100%;
 }
