--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@
     color: darkslategray;
     position: absolute;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 20px;
+    font-size: 30px;
 }
 
 .left-menu{
