--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,15 @@
 .menu-btn{
     margin: 20px 0 0 30px;
     width: 150px;
-    height: 50px;
-    border-radius: 15px;
+    height: 45px;
+    border-radius: 10px;
     background-color: #8ac6d1;
     border-color: #8ac6d1;
-    box-shadow: 1px 1px 0px 1px gray;
+    box-shadow: 1px 1px 0px 0px gray;
 }
 
 .menu-title{
-    padding: 15px 20px 20px 20px;
+    padding: 10px 20px;
     color: darkslategray;
     text-align: center;
 }
