--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@
 }
 
 .menu-title{
-    padding: 10px 20px;
+    /* padding: 20px; */
     color: rgb(4, 114, 116);
     text-align: center;
     font-weight: bold;
